# mentat-learn

./: .gitignore  Containerfile  Makefile  README.md  UPGRADE_2026.md  docker-compose.yml  pyproject.toml
assets/: index.html
bundle/: bundle.yaml  persona.md
bundle/evals/: golden.jsonl  rubric.md
bundle/memory/: seed.md
bundle/skills/: 01-four-layer-memory.md  02-dialectic-user-model.md  03-multi-channel-gateway.md  04-skill-extractor.md  05-privacy-redactor.md
bundle/tools/: mcp_server.py
bundle/verifier/: checker.py
docs/: _config.yml  architecture-tradeoff.md  architecture.md  index.html  index.md  skills.md  system-design.md
docs/blocks/: 01-gateway.md  02-agent-loop.md  03-four-layer-memory.md  04-skill-extractor-loop.md  05-skill-library.md  06-cron-scheduler.md  07-session-persistence.md  08-privacy-scope.md  09-dialectic-user-modeling.md  10-self-eval.md
skills/cross-channel-persona/: SKILL.md
skills/user-style-preference/: SKILL.md
src/mentat_learn/: __init__.py  app.py  cron.py  dialectic.py  gateway.py  loop.py  memory.py  models.py  privacy.py  self_eval.py  sessions.py  skills.py  tui.py  tui_theme.py  widgets.py
src/mentat_learn/skills_adapter/: __init__.py
tests/: conftest.py  test_app.py  test_cron.py  test_gateway.py  test_loop.py  test_memory.py  test_privacy.py  test_skills.py  test_skills_adapter.py
